--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.3.1.Final</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
